# EDatos

./: INSTRUCCIONES.md  meson.build  org.profe.EDatos.flatpak  org.profe.EDatos.json
data/: meson.build  org.profe.EDatos.appdata.xml.in  org.profe.EDatos.desktop.in  org.profe.EDatos.gschema.xml
po/: POTFILES  meson.build
src/: edatos-application.c  edatos-application.h  edatos-window.c  edatos-window.h  edatos-window.ui  edatos.gresource.xml  main.c  meson.build
